Fixed: Left/Right bars z-index

--- a/src/styles/themes/plain/sidebar/sidebar.styl
+++ b/src/styles/themes/plain/sidebar/sidebar.styl
@@ -122,14 +122,14 @@ body
   justify-content: center
   align-items: center
   flex-shrink: 0
-  z-index: 200
+  z-index: 300
 
 .main-box .right-vertical-box
   position: relative
   display: flex
   flex-direction: column
   flex-shrink: 0
-  z-index: 200
+  z-index: 300
 
 // ---
 // -- Panels
