--- a/src/styles/themes/proton/sidebar/sidebar.styl
+++ b/src/styles/themes/proton/sidebar/sidebar.styl
@@ -109,7 +109,7 @@ body
   justify-content: center
   align-items: center
   flex-shrink: 0
-  z-index: 200
+  z-index: 300
   grid-gap: var(--ff-border-width, 1px)
 
 .main-box .right-vertical-box
@@ -117,7 +117,7 @@ body
   display: flex
   flex-direction: column
   flex-shrink: 0
-  z-index: 200
+  z-index: 300
   grid-gap: var(--ff-border-width, 1px)
 
 // ---
